# crt2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.sh
include/: binary_file.hpp  bvh.hpp  geometry.hpp  group.hpp  ray.hpp  render.hpp  rigid_body.hpp  scene.hpp
include/acceleration/: bvh.hpp  scene.hpp  tlas.hpp  transform_node.hpp  translate_node.hpp
include/acceleration/graph/: graph.hpp
include/cameras/: camera.hpp  simple_camera.hpp
include/graph_nodes/: blas_node.hpp  graph_node.hpp  rotate_node.hpp  scale_node.hpp  tlas_node.hpp  transform_node.hpp  translate_node.hpp
include/lights/: light.hpp  point_light.hpp
include/materials/: lambertian.hpp  material.hpp  sampling.hpp
include/path_tracing/: backward.hpp
include/physics/: spectral_radiance.hpp
include/primitives/: aabb.hpp  geometry.hpp  ray.hpp  transform.hpp  triangle.hpp
include/sensors/: sensor.hpp  simple_sensor.hpp
include/utils/: euler_angles.hpp  parallel.hpp  rigid_body.hpp  rotation.hpp  vector.hpp
include/vector_math/: rotation.hpp  vector.hpp
lib/: CMakeLists.txt  binary_file.cpp  bvh.cpp  geometry.cpp  ray.cpp  render.cpp  rigid_body.cpp  scene.cpp
lib/acceleration/: bvh.cpp  scene.cpp
lib/cameras/: simple_camera.cpp
lib/graph_nodes/: blas_node.cpp  tlas_node.cpp
lib/lights/: point_light.cpp
lib/materials/: lambertian.cpp  sampling.cpp
lib/path_tracing/: backward.cpp
lib/physics/: spectral_radiance.cpp
lib/primitives/: aabb.cpp  geometry.cpp  ray.cpp  triangle.cpp
lib/sensors/: simple_sensor.cpp
lib/utils/: euler_angles.cpp  rigid_body.cpp  rotation.cpp  vector.cpp
lib/vector_math/: rotation.cpp  vector.cpp
src/: CMakeLists.txt  convert_obj.cpp  convert_objs.cpp  jacco.cpp  render.cpp  render_test.cpp  vira.cpp
